🆕#13: Docker + bugfixes